--- a/src/Applications/BusInfo.Web/Views/Shared/_Layout.cshtml
+++ b/src/Applications/BusInfo.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 
 	<title>BusInfo Demo - Bootstrap 5 Admin Template</title>
 
-	<link href="css/app.css" rel="stylesheet">
+	<link href="~/css/app.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
@@ -291,7 +291,7 @@
 		</nav>
 		<main class="content">
 			<div class="container-fluid p-0">
-				@RenderBody();
+				@RenderBody()
 			</div>
 		</main>
 					<footer class="footer">
