--- a/src/Applications/BusInfo.Web/Views/User/Profile.cshtml
+++ b/src/Applications/BusInfo.Web/Views/User/Profile.cshtml
@@ -1,3 +1,4 @@
+@using BusInfo.Core.Classes
 @model DriverViewModel;
 <!DOCTYPE html>
 <html lang="en">
@@ -7,12 +8,12 @@
 <head>
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+   
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
 
 	<link href="~/css/app.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -129,7 +130,9 @@
 									<h5 class="h6 card-title">Нақлиёт</h5>
 									<div class="mt-2">Рақами давлатӣ: @Model.Bus.BusNum</div> 
 									<div class="mt-2 mb-2">Хатсайри @Model.Bus.RouteNum </div> 
-									<button type="button" class="btn btn-primary btn-sm">Ивазкунӣ</button>
+									<button type="button" class="btn btn-primary btn-sm" onclick="Edit()">
+										Ивазкунӣ
+									</button>
 									</div>
 							
 								<div class="card-body">
@@ -227,7 +230,11 @@
         		</div>
         	</div>
         </div>     
-
+<script>
+function Edit () {
+	window.location.href = '/Bus/View/@Model.Bus.Id';
+}
+</script>
 </body>
 
 </html>
