Update route with ajax added

--- a/src/Applications/BusInfo.Web/Views/Shared/_Layout.cshtml
+++ b/src/Applications/BusInfo.Web/Views/Shared/_Layout.cshtml
@@ -14,8 +14,13 @@
 
 	<link rel="canonical" href="https://demo-basic.BusInfo.io/" />
 
-	<title>BusInfo Demo - Bootstrap 5 Admin Template</title>
-
+	<tile>BusInfo Demo - Bootstrap 5 Admin Template</tile>
+	<script src="~/lib/jquery/dist/jquery.js"></script>
+	<link rel="stylesheet" href="~/css/app.css">
+	<link rel="stylesheet" href="~/css/site.css">
+	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="~/lib/bootstrap/dist/js/bootstrap.min.js">
+    	
 	<link href="~/css/app.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
