--- a/src/Applications/BusInfo.Web/Views/Route/Route.cshtml
+++ b/src/Applications/BusInfo.Web/Views/Route/Route.cshtml
@@ -1,50 +1,185 @@
+@using Microsoft.EntityFrameworkCore.Infrastructure
 @model BusInfo.Core.Classes.Route;
 
 @{
     Layout = "_Layout";
 }
-	<main class="content">
-				<div class="container-fluid p-0">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+	
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 
-					<h1 class="h3 mb-3">Рӯйхати истгоҳҳо барои хатсайри</h1>
+	<link href="~/css/app.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
-					<div class="row">
-						<div class="col-12">
-							<div class="card">
-								<div class="card-header">
-									<h5 class="card-title mb-0">Empty card</h5>
-								</div>
-								<div class="card-body">
-									
-								<table class="table table-hover my-0">
-									<thead>
-									<tr>
-										<th>#</th>
-										<th>Номи истгоҳ</th>
-										<th class="d-none d-xl-table-cell">Latitude</th>
-										<th class="d-none d-xl-table-cell">Longitude</th>
-										
-										
-									</tr>
-									</thead>
-									<tbody>
-									@for (var i = 0; i < Model.Places.Count; i++)
-									{
-										<tr>
-											<td>@(i+1)</td>
-											<td>@Model.Places[i].PlaceName</td>
-											<td class="d-none d-xl-table-cell">@Model.Places[i].Latitude</td>
-											<td class="d-none d-xl-table-cell">@Model.Places[i].Longitude</td>
-											
-										</tr>
-									}
-									</tbody>
-								</table>
-								</div>
+
+<main class="content">
+	<div class="container-fluid p-0">
+
+		<h1 class="h3 mb-3">Рӯйхати истгоҳҳо барои хатсайри</h1>
+
+		<div class="row">
+			<div class="col-12">
+				<div class="card">
+					<div class="card-header">
+						<h5 class="card-title mb-0">Empty card</h5>
+						<div class="">
+							<button class="btn-primary btn pull-right">Дохил кунӣ</button>
 							</div>
-						</div>
 					</div>
-
+					<div class="card-body">
+									
+						<table class="table table-hover my-0">
+							<thead>
+							<tr>
+								<th>#</th>
+								<th>Номи истгоҳ</th>
+								<th>Latitude</th>
+								<th>Longitude</th>
+								<th>Диганкуни</th>
+										
+							</tr>
+							</thead>
+							<tbody>
+							@for (var i = 0; i < Model.Places.Count; i++)
+							{
+								<tr class="clickable-row" data-href="#mymodal" data-toggle="modal">
+									<td>@(i+1)</td>
+									<td id="placeName-@i">@Model.Places[i].PlaceName</td>
+									<td id="latitude-@i">@Model.Places[i].Latitude</td>
+									<td id="longitude-@i">@Model.Places[i].Longitude</td>
+									<td><button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal" id="editBtn-@i">Дигаркунӣ</button>
+									<input type="hidden" value=@Model.Places[i].Id id="pId-@i"/>
+								</tr>
+							}
+							</tbody>
+						</table>
+					</div>
 				</div>
-			</main>
+			</div>
+		</div>
 
+	</div>
+</main><div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+         <div class="modal-dialog">
+           <div class="modal-content">
+             <div class="modal-header">
+               <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+             </div>
+	           <div class="modal-body">
+		           @{
+			           
+		           }
+		           <div id="map" style="height: 300px;"></div>
+		           <form method="post" id="form" asp-action="UpdateRoute">
+			           <div class="form-group mt-2">
+				           <label class="form-label" for="Latitude">Latitude</label>
+				           <input type="text" id="lat" name="Latitude" class="form-control"/>
+			           </div>
+			           <div class="form-group mt-2">
+				           <label class="form-label" for="Longitude">Longitude</label>
+				           <input id="long" type="text" class="form-control" name="Longitude"/>
+			           </div>
+			           <div class="form-group mt-2">
+				           <label class="form-label" for="PlaceName">Номи истгоҳ</label>
+				           <input type="text" id="pName"class="form-control" name="PlaceName"/>
+			           </div>
+			           <div class="modal-footer">
+				           <input type="hidden" name="Id" id="Id"/>
+				           <input type="hidden" value="@Model.Number" name="routeNum" id="routeNum"/>
+				           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+				           <button type="button" class="btn btn-primary" onclick="submitStudent()">Сабт кардан</button>
+			           </div>
+		           </form>
+	           </div>
+            
+           </div>
+         </div>
+       </div>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8psS4SSRjFm6Dn4dQfpA4BjDnhzpc7OI&callback=initMap" async defer></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/jquery-ui.js" type="text/javascript"></script>
+<link href="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/themes/blitzer/jquery-ui.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript">
+var pnum;
+ function submitStudent() {
+        var data = $("#form").serialize();
+        console.log(data);
+      
+        $.ajax({
+            type: 'POST',
+            url: '/Route/UpdateRoute/',
+            data: data,
+            success: function (result) {
+				console.log(result);
+				var moda=document.getElementById('exampleModal');
+				bootstrap.Modal.getInstance(moda).hide();
+                document.getElementById("placeName-"+pnum).innerText=document.getElementById("pName").value
+				document.getElementById("latitude-"+pnum).innerText=document.getElementById("lat").value
+                document.getElementById("longitude-"+pnum).innerText=document.getElementById("long").value;			
+            },
+            error: function () {
+                alert('Failed to receive the Data');
+                console.log('Failed ');
+            }
+        });
+        return false;
+    }
+		
+ let map;
+ let marker;
+ 		function initMap(latitude, longitude) {
+ 			map = new google.maps.Map( document.getElementById( 'map' ), {
+ 				center: {
+ 					lat: parseFloat(latitude),
+ 					lng: parseFloat(longitude)
+ 				},
+ 				zoom: 15
+ 			});
+ 		google.maps.event.addListener(map,'click',function(event){
+ 			if (marker!=null) {
+ 				marker.setPosition(event.latLng);
+ 				let lattext = document.getElementById("lat");
+ 				lattext.value = event.latLng.lat()
+ 				let longtext = document.getElementById("long");
+ 				longtext.value = event.latLng.lng();
+ 		
+ 			}
+ 			else {
+                 addMarker(event.latLng);
+             }
+ 		
+ 		})
+ 
+ 		}
+ 		function addMarker(position) {
+ 			marker = new google.maps.Marker({position: position,map: map});
+ 		google.maps.event.addListener(marker,'click',function(event){
+ 			marker.setMap(null);
+ 			marker=null;
+ 			
+ 		
+ 		})
+ 		let lattext = document.getElementById("lat");
+ 		lattext.value = position.lat();
+ 		console.log(lattext.value);
+ 		let longtext = document.getElementById("long");
+ 		longtext.value = position.lng();	
+ 		} 
+  var exampleModal = document.getElementById('exampleModal')
+  exampleModal.addEventListener('show.bs.modal', function (event) {
+    var modalTitle = exampleModal.querySelector('.modal-title')
+    modalTitle.textContent = 'Харита'
+    pnum = event.relatedTarget.id.split('-')[1];
+	var latR = document.getElementById("latitude-"+pnum).innerText;
+	var longR = document.getElementById("longitude-"+pnum).innerText;
+	document.getElementById("Id").value =document.getElementById("pId-"+pnum).value
+	var placeNameR = document.getElementById("placeName-"+pnum).innerText;
+	document.getElementById("lat").value = latR;
+	document.getElementById("long").value = longR;
+	document.getElementById("pName").value = placeNameR;
+    initMap(latR,longR);  
+	addMarker(new google.maps.LatLng(latR, longR));
+  });
+</script>
