--- a/src/Applications/BusInfo.Web/Views/Home/index.cshtml
+++ b/src/Applications/BusInfo.Web/Views/Home/index.cshtml
@@ -1,165 +1,171 @@
 @{
-	Layout = "_Layout";
-	
-}	
+    Layout = "_Layout";
+
+}
 <script src="js/app.js"></script>
 <main class="content">
-				<div class="container-fluid p-0">
+    <div class="container-fluid p-0">
 
-					<h1 class="h3 mb-3"><strong>Ҳисоботҳо</strong></h1>
+        <h1 class="h3 mb-3">
+            <strong>Ҳисоботҳо</strong>
+        </h1>
 
-					<div class="row">
-						<div class="col-xl-6 col-xxl-5 d-flex">
-							<div class="w-100">
-								<div class="row">
-									<div class="col-sm-6">
-										<div class="card">
-											<div class="card-body">
-												<div class="row">
-													<div class="col mt-0">
-														<h5 class="card-title">Автобусҳо</h5>
-													</div>
+        <div class="row">
+            <div class="col-xl-6 col-xxl-5 d-flex">
+                <div class="w-100">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="card">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col mt-0">
+                                            <h5 class="card-title">Автобусҳо</h5>
+                                        </div>
 
-													<div class="col-auto">
-														<div class="stat text-primary">
-															<i class="align-middle" data-feather="truck"></i>
-														</div>
-													</div>
-												</div>
-												<h1 class="mt-1 mb-3">@ViewBag.Buses.Count</h1>
-											</div>
-										</div>
-										<div class="card">
-											<div class="card-body">
-												<div class="row">
-													<div class="col mt-0">
-														<h5 class="card-title">Ронандагон</h5>
-													</div>
+                                        <div class="col-auto">
+                                            <div class="stat text-primary">
+                                                <i class="align-middle" data-feather="truck"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <h1 class="mt-1 mb-3">@ViewBag.Buses.Count</h1>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col mt-0">
+                                            <h5 class="card-title">Ронандагон</h5>
+                                        </div>
 
-													<div class="col-auto">
-														<div class="stat text-primary">
-															<i class="align-middle" data-feather="users"></i>
-														</div>
-													</div>
-												</div>
-												<h1 class="mt-1 mb-3">@ViewBag.Drivers.Count</h1>
-											</div>
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="card">
-											<div class="card-body">
-												<div class="row">
-													<div class="col mt-0">
-														<h5 class="card-title">Earnings</h5>
-													</div>
+                                        <div class="col-auto">
+                                            <div class="stat text-primary">
+                                                <i class="align-middle" data-feather="users"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <h1 class="mt-1 mb-3">@ViewBag.Drivers.Count</h1>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="card">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col mt-0">
+                                            <h5 class="card-title">Earnings</h5>
+                                        </div>
 
-													<div class="col-auto">
-														<div class="stat text-primary">
-															<i class="align-middle" data-feather="dollar-sign"></i>
-														</div>
-													</div>
-												</div>
-												<h1 class="mt-1 mb-3">$21.300</h1>
-												<div class="mb-0">
-													<span class="text-success"> <i class="mdi mdi-arrow-bottom-right"></i> 6.65% </span>
-													<span class="text-muted">Since last week</span>
-												</div>
-											</div>
-										</div>
-										<div class="card">
-											<div class="card-body">
-												<div class="row">
-													<div class="col mt-0">
-														<h5 class="card-title">Orders</h5>
-													</div>
+                                        <div class="col-auto">
+                                            <div class="stat text-primary">
+                                                <i class="align-middle" data-feather="dollar-sign"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <h1 class="mt-1 mb-3">$21.300</h1>
+                                    <div class="mb-0">
+                                        <span class="text-success"> <i class="mdi mdi-arrow-bottom-right"></i> 6.65% </span>
+                                        <span class="text-muted">Since last week</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col mt-0">
+                                            <h5 class="card-title">Orders</h5>
+                                        </div>
 
-													<div class="col-auto">
-														<div class="stat text-primary">
-															<i class="align-middle" data-feather="shopping-cart"></i>
-														</div>
-													</div>
-												</div>
-												<h1 class="mt-1 mb-3">64</h1>
-												<div class="mb-0">
-													<span class="text-danger"> <i class="mdi mdi-arrow-bottom-right"></i> -2.25% </span>
-													<span class="text-muted">Since last week</span>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+                                        <div class="col-auto">
+                                            <div class="stat text-primary">
+                                                <i class="align-middle" data-feather="shopping-cart"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <h1 class="mt-1 mb-3">64</h1>
+                                    <div class="mb-0">
+                                        <span class="text-danger"> <i class="mdi mdi-arrow-bottom-right"></i> -2.25% </span>
+                                        <span class="text-muted">Since last week</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-						<div class="col-xl-6 col-xxl-7">
-							<div class="card flex-fill w-100">
-								<div class="card-header">
-									<h5 class="card-title mb-0">Баромадҳои ҳаррӯза.</h5>
-								</div>
-								<div class="card-body py-3">
-									<div class="chart chart-sm">
-										<canvas id="chartjs-dashboard-line"></canvas>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+            <div class="col-xl-6 col-xxl-7">
+                <div class="card flex-fill w-100">
+                    <div class="card-header">
+                        <h5 class="card-title mb-0">Баромадҳои ҳаррӯза.</h5>
+                    </div>
+                    <div class="card-body py-3">
+                        <div class="chart chart-sm">
+                            <canvas id="chartjs-dashboard-line"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-					<div class="row">
-						<div class="col-12 col-md-12 col-xxl-12 d-flex order-3 order-xxl-2">
-							<div class="card flex-fill w-100">
-								<div class="card-header">
-									<h5 class="card-title mb-0">Ҷойгиршавии автобусҳо</h5>
-								</div>
-								<div class="card-body px-4 ">
-									<div id="map" style="height:800px;"></div>
-								</div>
-							</div>
-						</div>
-						</div>
+        <div class="row">
+            <div class="col-12 col-md-12 col-xxl-12 d-flex order-3 order-xxl-2">
+                <div class="card flex-fill w-100">
+                    <div class="card-header">
+                        <h5 class="card-title mb-0">Ҷойгиршавии автобусҳо</h5>
+                    </div>
+                    <div class="card-body px-4 ">
+                        <div id="map" style="height:800px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-					<div class="row">
-						<div class="col-12 col-lg-12 col-xxl-12 d-flex">
-							<div class="card flex-fill">
-								<div class="card-header">
+        <div class="row">
+            <div class="col-12 col-lg-12 col-xxl-12 d-flex">
+                <div class="card flex-fill">
+                    <div class="card-header">
 
-									<h5 class="card-title mb-0">Автобусҳои дар роҳ буда</h5>
-								</div>
-								<table class="table table-hover my-0">
-									<thead>
-									<tr>
-										<th>#</th>
-										<th>Номи ронанда</th>
-										<th class="d-none d-xl-table-cell">Раками автобус</th>
-										<th class="d-none d-xl-table-cell">Раками хатсайр</th>
-										<th>Ҳолат</th>
-										
-									</tr>
-									</thead>
-									<tbody>
-									@for (var i = 0; i < @ViewBag.Buses.Count; i++)
-									{
-										<tr>
-											<td>@(i+1)</td>
-											<td><a href="/Driver/View/@ViewBag.Drivers[i].Id/">@ViewBag.Drivers[i].DriverName</a></td>
-											<td class="d-none d-xl-table-cell">@ViewBag.Buses[i].BusNum</td>
-											<td class="d-none d-xl-table-cell">@ViewBag.Buses[i].RouteNum</td>
-											<td><span class="badge bg-success">Дар роҳ</span></td>
-										</tr>
-									}
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
+                        <h5 class="card-title mb-0">Автобусҳои дар роҳ буда</h5>
+                    </div>
+                    <table class="table table-hover my-0">
+                        <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Номи ронанда</th>
+                            <th class="d-none d-xl-table-cell">Раками автобус</th>
+                            <th class="d-none d-xl-table-cell">Раками хатсайр</th>
+                            <th>Ҳолат</th>
 
-				</div>
-			</main>
-		
-	<script src="js/app.js"></script>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        @for (var i = 0; i < @ViewBag.Buses.Count; i++)
+                        {
+                            <tr>
+                                <td>@(i + 1)</td>
+                                <td>
+                                    <a href="/Driver/View/@ViewBag.Drivers[i].Id/">@ViewBag.Drivers[i].DriverName</a>
+                                </td>
+                                <td class="d-none d-xl-table-cell">@ViewBag.Buses[i].BusNum</td>
+                                <td class="d-none d-xl-table-cell">@ViewBag.Buses[i].RouteNum</td>
+                                <td>
+                                    <span class="badge bg-success">Дар роҳ</span>
+                                </td>
+                            </tr>
+                        }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
 
-	<script>
+    </div>
+</main>
+
+<script src="js/app.js"></script>
+
+<script>
 		document.addEventListener("DOMContentLoaded", function() {
 			var ctx = document.getElementById("chartjs-dashboard-line").getContext("2d");
 			var gradient = ctx.createLinearGradient(0, 0, 0, 225);
@@ -229,7 +235,7 @@
 			});
 		});
 	</script>
-	<script>
+<script>
 		document.addEventListener("DOMContentLoaded", function() {
 			// Pie chart
 			new Chart(document.getElementById("chartjs-dashboard-pie"), {
@@ -257,7 +263,7 @@
 			});
 		});
 	</script>
-	<script>
+<script>
 		document.addEventListener("DOMContentLoaded", function() {
 			// Bar chart
 			new Chart(document.getElementById("chartjs-dashboard-bar"), {
@@ -369,7 +375,7 @@
 		}
 	</script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8psS4SSRjFm6Dn4dQfpA4BjDnhzpc7OI&callback=initMap" async defer></script>
-	<script>
+<script>
 		document.addEventListener("DOMContentLoaded", function() {
 			var date = new Date(Date.now() - 5 * 24 * 60 * 60 * 1000);
 			var defaultDate = date.getUTCFullYear() + "-" + (date.getUTCMonth() + 1) + "-" + date.getUTCDate();
