--- a/src/Applications/BusInfo.Web/Views/Shared/_Layout.cshtml
+++ b/src/Applications/BusInfo.Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="~/css/site.css">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/js/bootstrap.min.js">
-
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/jquery-ui.js" type="text/javascript"></script>
+    <link href="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/themes/blitzer/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <link href="~/css/app.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
