Added BusList and DriverList edited _Layout.cshtml and any else We released first Beta version

--- a/src/Applications/BusInfo.Web/Views/Route/RouteList.cshtml
+++ b/src/Applications/BusInfo.Web/Views/Route/RouteList.cshtml
@@ -192,4 +192,6 @@ var exampleModal = document.getElementById('exampleModal')
               }); 
   		 }
 
+document.getElementById("home").classList.remove("active");
+document.getElementById("routes").classList.add("active");
 </script>
