--- a/src/Applications/BusInfo.Web/Views/Shared/_Layout.cshtml
+++ b/src/Applications/BusInfo.Web/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 
     <link rel="canonical" href="https://demo-basic.BusInfo.io/"/>
 
-    <tile>BusInfo Demo - Bootstrap 5 Admin Template</tile>
+    <tile>BusInfo</tile>
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <link rel="stylesheet" href="~/css/app.css">
     <link rel="stylesheet" href="~/css/site.css">
@@ -30,107 +30,36 @@
 <div class="wrapper">
 <nav id="sidebar" class="sidebar js-sidebar">
     <div class="sidebar-content js-simplebar">
-        <a class="sidebar-brand" href="/Home">
-            <span class="align-middle">BusInfo</span>
-        </a>
 
         <ul class="sidebar-nav">
             <li class="sidebar-header">
-                Pages
+                 Саҳфаҳо
             </li>
 
-            <li class="sidebar-item active">
+            <li class="sidebar-item active" id="home">
                 <a class="sidebar-link" href="/Home">
-                    <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Dashboard</span>
+                    <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Асосӣ</span>
                 </a>
             </li>
 
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="pages-profile.html">
-                    <i class="align-middle" data-feather="user"></i> <span class="align-middle">Profile</span>
+            <li class="sidebar-item" id="drivers">
+                <a class="sidebar-link" href="/Drivers">
+                    <i class="align-middle" data-feather="user"></i> <span class="align-middle">Ронандагон</span>
+                </a>
+            </li>
+            
+            <li class="sidebar-item" id="buses">
+                <a class="sidebar-link" href="/Buses">
+                    <i class="align-middle" data-feather="truck"></i> <span class="align-middle">Нақлиётҳо</span>
                 </a>
             </li>
 
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="pages-sign-in.html">
-                    <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign In</span>
-                </a>
-            </li>
-
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="pages-sign-up.html">
-                    <i class="align-middle" data-feather="user-plus"></i> <span class="align-middle">Sign Up</span>
-                </a>
-            </li>
-
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="pages-blank.html">
-                    <i class="align-middle" data-feather="book"></i> <span class="align-middle">Blank</span>
-                </a>
-            </li>
-
-            <li class="sidebar-header">
-                Tools & Components
-            </li>
-
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="ui-buttons.html">
-                    <i class="align-middle" data-feather="square"></i> <span class="align-middle">Buttons</span>
-                </a>
-            </li>
-
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="ui-forms.html">
-                    <i class="align-middle" data-feather="check-square"></i> <span class="align-middle">Forms</span>
-                </a>
-            </li>
-
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="ui-cards.html">
-                    <i class="align-middle" data-feather="grid"></i> <span class="align-middle">Cards</span>
-                </a>
-            </li>
-
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="ui-typography.html">
-                    <i class="align-middle" data-feather="align-left"></i> <span class="align-middle">Typography</span>
-                </a>
-            </li>
-
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="icons-feather.html">
-                    <i class="align-middle" data-feather="coffee"></i> <span class="align-middle">Icons</span>
-                </a>
-            </li>
-
-            <li class="sidebar-header">
-                Plugins & Addons
-            </li>
-
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="charts-chartjs.html">
-                    <i class="align-middle" data-feather="bar-chart-2"></i> <span class="align-middle">Charts</span>
-                </a>
-            </li>
-
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="maps-google.html">
-                    <i class="align-middle" data-feather="map"></i> <span class="align-middle">Maps</span>
+            <li class="sidebar-item" id="routes">
+                <a class="sidebar-link" href="/Routes">
+                    <i class="align-middle" data-feather="map"></i> <span class="align-middle">Хатсайрҳо</span>
                 </a>
             </li>
         </ul>
-
-        <div class="sidebar-cta">
-            <div class="sidebar-cta-content">
-                <strong class="d-inline-block mb-2">Upgrade to Pro</strong>
-                <div class="mb-3 text-sm">
-                    Are you looking for more components? Check out our premium version.
-                </div>
-                <div class="d-grid">
-                    <a href="upgrade-to-pro.html" class="btn btn-primary">Upgrade to Pro</a>
-                </div>
-            </div>
-        </div>
     </div>
 </nav>
 
@@ -307,27 +236,8 @@
                     <p class="mb-0">
                         <a class="text-muted" href="http://BusInfo.contest.tj/" target="_blank">
                             <strong>BusInfo</strong>
-                        </a> -
-                        <a class="text-muted" href="http://BusInfo.contest.tj/" target="_blank">
-                            <strong>Bootstrap Admin Template</strong>
-                        </a> &copy;
+                        </a> 
                     </p>
-                </div>
-                <div class="col-6 text-end">
-                    <ul class="list-inline">
-                        <li class="list-inline-item">
-                            <a class="text-muted" href="http://BusInfo.contest.tj/" target="_blank">Support</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="text-muted" href="http://BusInfo.contest.tj/" target="_blank">Help Center</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="text-muted" href="https://BusInfo.contest.tj" target="_blank">Privacy</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="text-muted" href="http://BusInfo.contest.tj" target="_blank">Terms</a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
