--- a/src/Applications/BusInfo.Web/Views/Bus/Bus.cshtml
+++ b/src/Applications/BusInfo.Web/Views/Bus/Bus.cshtml
@@ -1,108 +1,19 @@
+@using BusInfo.Core.Classes
 @model BusViewModel;
-<!DOCTYPE html>
-<html lang="en">
 @{
     Layout = "_Layout";
 }
-<head>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8psS4SSRjFm6Dn4dQfpA4BjDnhzpc7OI&callback=initMap" async defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 
     <link href="~/css/app.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-    <style>
-	.modal-confirm {		
-    	color: #636363;
-    	width: 400px;
-    }
-    .modal-confirm .modal-content {
-    	padding: 20px;
-    	border-radius: 5px;
-    	border: none;
-    	text-align: center;
-    	font-size: 14px;
-    }
-    .modal-confirm .modal-header {
-    	border-bottom: none;   
-    	position: relative;
-    }
-    .modal-confirm h4 {
-    	text-align: center;
-    	font-size: 26px;
-    	margin: 30px 0 -10px;
-    }
-    .modal-confirm .close {
-    	position: absolute;
-    	top: -5px;
-    	right: -2px;
-    }
-    .modal-confirm .modal-body {
-    	color: #999;
-    }
-    .modal-confirm .modal-footer {
-    	border: none;
-    	text-align: center;		
-    	border-radius: 5px;
-    	font-size: 13px;
-    	padding: 10px 15px 25px;
-    }
-    .modal-confirm .modal-footer a {
-    	color: #999;
-    }		
-    .modal-confirm .icon-box {
-    	width: 80px;
-    	height: 80px;
-    	margin: 0 auto;
-    	border-radius: 50%;
-    	z-index: 9;
-    	text-align: center;
-    	border: 3px solid #f15e5e;
-    }
-    .modal-confirm .icon-box i {
-    	color: #f15e5e;
-    	font-size: 46px;
-    	display: inline-block;
-    	margin-top: 13px;
-    }
-    .modal-confirm .btn, .modal-confirm .btn:active {
-    	color: #fff;
-    	border-radius: 4px;
-    	background: #60c7c1;
-    	text-decoration: none;
-    	transition: all 0.4s;
-    	line-height: normal;
-    	min-width: 120px;
-    	border: none;
-    	min-height: 40px;
-    	border-radius: 3px;
-    	margin: 0 5px;
-    }
-    .modal-confirm .btn-secondary {
-    	background: #c1c1c1;
-    }
-    .modal-confirm .btn-secondary:hover, .modal-confirm .btn-secondary:focus {
-    	background: #a8a8a8;
-    }
-    .modal-confirm .btn-danger {
-    	background: #f15e5e;
-    }
-    .modal-confirm .btn-danger:hover, .modal-confirm .btn-danger:focus {
-    	background: #ee3535;
-    }
-    .trigger-btn {
-    	display: inline-block;
-    	margin: 100px auto;
-    }
-	</style>
-</head>
-
-<body>
 <div class="main">
     <main class="content">
+        <form asp-action="UpdateBus" method="post">
         <div class="container-fluid p-0">
 
             <div class="mb-3">
@@ -122,11 +33,19 @@
                         </div>
                         <hr class="my-0"/>
                         <div class="card-body text-center">
-                            <h5 class="h6 card-title">Ронанда</h5>
-                            <div class="mt-2">Ном @Model.Driver.DriverName</div>
-                            <div class="mt-2 mb-2">Насаб @Model.Driver.DriverSurname </div>
+                            <h6 class="card-title">Ронанда</h6>
+                            <select asp-for="DriverId">
+                                @{
+                                    List<Driver> drivers = ViewBag.DriverList;
+                                    foreach (var driver in drivers)
+                                    {
+                                        <option value="@driver.Id">@driver.DriverName @driver.DriverSurname</option>
+                                    }
+                                }
 
-                            <button type="button" class="btn btn-primary btn-sm" onclick="Edit()">Ивазкунӣ</button>
+                            </select>
+
+                            <button type="button" class="btn btn-primary btn-sm mt-2" onclick="Edit()">Ивазкунӣ</button>
                         </div>
 
                         <div class="card-body">
@@ -142,98 +61,78 @@
 
                             <h5 class="card-title mb-0">Ивазкунии маълумот</h5>
                         </div>
-                        <form asp-action="UpdateBus" method="post">
-                            <div class="card-body h-100 w-100">
-                                <h6>Маълумоти асосӣ</h6>
-                                <div class="d-flex align-items-start">
-                                    <div class="row flex-grow-1 flex-row">
-                                        <div class="col">
-                                            <div class="form-group">
-                                                <label for="Name">Рақами давлатӣ</label>
-                                                <input type="text" class="form-control" id="Name" asp-for="BusNum">
-                                                <input type="text" class="form-control" id="busId" asp-for="Id" hidden>
-                                                <input type="text" class="form-control" id="DriverId" asp-for="DriverId" hidden>
-
-                                            </div>
+                        
+                            
+                        <div class="card-body h-100 w-100">
+                            <h6>Маълумоти асосӣ</h6>
+                            <div class="d-flex align-items-start">
+                                <div class="row flex-grow-1 flex-row">
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <label for="Name">Рақами давлатӣ</label>
+                                            <input type="text" class="form-control" id="Name" asp-for="BusNum" required>
+                                            <input type="text" class="form-control" id="busId" asp-for="Id" hidden>
+                                            <input type="text" class="form-control" id="DriverId" asp-for="DriverId" hidden>
+                                            <input type="hidden" asp-for="IsCreate"/>
                                         </div>
-                                        <div class="col">
-                                            <div class="form-group">
-                                                <label for="SurName">Хатсайр</label>
-                                                <input type="text" class="form-control" asp-for="RouteNum">
-                                            </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <label for="SurName">Хатсайр</label>
+                                            <input type="text" class="form-control" asp-for="RouteNum" required>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
 
-                                <hr/>
-                                <h6>Ҷойгиршавӣ</h6>
-                                <div class="d-flex align-items-start pt-3">
-                                    <div class="row flex-grow-1 flex-row ">
-                                        <div class="col">
-                                            <label>Latitude</label>
-                                            <input type="text" id="lat" class="form-control" asp-for="Latitude">
-
-                                        </div>
-                                        <div class="col">
-                                            <label>Longitude</label>
-                                            <input type="text" id="long" class="form-control" asp-for="Longitude"/>
-                                        </div>
-                                    </div>
-
-                                </div>
-                                <hr/>
-                                <div class="d-flex align-items-start pt-3">
-                                    <div class="row flex-grow-1 flex-row ">
-                                        <div class="col">
-                                            <label>Интихоб дар харита</label>
-                                            <div id="map" class="form-control" style="height: 500px;"></div>
-                                        </div>
+                            <hr/>
+                            <h6>Ҷойгиршавӣ</h6>
+                            <div class="d-flex align-items-start pt-3">
+                                <div class="row flex-grow-1 flex-row ">
+                                    <div class="col">
+                                        <label>Latitude</label>
+                                        <input type="text" id="lat" class="form-control" asp-for="Latitude" required>
 
                                     </div>
+                                    <div class="col">
+                                        <label>Longitude</label>
+                                        <input type="text" id="long" class="form-control" asp-for="Longitude" required/>
+                                    </div>
                                 </div>
-                                <hr/>
-                                <div class="d-flex align-items-start pt-3">
 
-                                    <div class="row flex-grow-1 flex-row ">
-                                        <div class="col">
-                                            <input type="submit" value="Сабт кардан" class="btn btn-primary"/>
-                                        </div>
-                                        <div class="col">
-                                            <a href="#myModal" data-toggle="modal"id="myBtn" class="btn btn-danger">Хориҷ кардан</a>
-                                        </div>
-
+                            </div>
+                            <hr/>
+                            <div class="d-flex align-items-start pt-3">
+                                <div class="row flex-grow-1 flex-row ">
+                                    <div class="col">
+                                        <label>Интихоб дар харита</label>
+                                        <div id="map" class="form-control" style="height: 500px;"></div>
                                     </div>
 
                                 </div>
                             </div>
-                        </form>
+                            <hr/>
+                            <div class="d-flex align-items-start pt-3">
+
+                                <div class="row flex-grow-1 flex-row ">
+                                    <div class="col">
+                                        <input type="submit" value="Сабт кардан" class="btn btn-primary"/>
+                                    </div>
+                                    <div class="col">
+                                        <button id="myBtn" class="btn btn-danger" onclick="location.href='/Bus/Delete/'+'@Model.Id'">Хориҷ кардан</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
 
         </div>
+        </form>
     </main>
 
-</div>
-<div id="myModal" class="modal fade">
-    <div class="modal-dialog modal-confirm">
-        <div class="modal-content">
-            <div class="modal-header flex-column">
-                <div class="icon-box">
-                    <i class="material-icons">&#xE5CD;</i>
-                </div>
-                <h4 class="modal-title w-100">Шумо боварӣ доред??</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            </div>
-            <div class="modal-body">
-                <p>Шумо мехоҳед нақлиёт - @Model.BusNum ро аз система хориҷ намоед? </p>
-            </div>
-            <div class="modal-footer justify-content-center">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Бозгашт</button>
-                <a href="/User/Delete/@Model.Id" class="btn btn-danger">Хориҷ кардан</a>
-            </div>
-        </div>
-    </div>
 </div>
 <script>
 function Edit(){
@@ -282,5 +181,4 @@ let marker;
 		}
 		
 </script>
-</body>
-</html>
+
